--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Chess AI</title>
+    >
+	<title>Chess Ai</title>
+	<meta property="og:title" content="Chess Ai" />
+	<meta property="og:url" content="https://zolipop2012.github.io/Chess/" />
+	<meta property="og:description" content="zoltan@gmail.com" />
+	<meta property="og:image" content="https://lrusso.github.io/VirtualXP/VirtualXPShare.png" />
+	<meta property="og:type" content="website" />
+	<meta property="og:site_name" content="Chess Ai" />
+	<meta name="theme-color" content="#000000" />
+	<meta name="mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/oakmac/chessboardjs/lib/chessboard.css" />
   </head>
   <body>
