--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     >
 	<title>Chess Ai</title>
 	<meta property="og:title" content="Chess Ai" />
-	<meta property="og:url" content="https://zolipop2012.github.io/Chess/" />
+	<meta property="og:url" content="https://zolipop2012.github.io/Chess2/" />
 	<meta property="og:description" content="zoltan@gmail.com" />
 	<meta property="og:image" content="https://lrusso.github.io/VirtualXP/VirtualXPShare.png" />
 	<meta property="og:type" content="website" />
