--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    >
+    <meta charset="UTF-8">
 	<title>Chess Ai</title>
 	<meta property="og:title" content="Chess Ai" />
 	<meta property="og:url" content="https://zolipop2012.github.io/Chess2/" />
